@@ -1631,6 +1631,40 @@ class tx_oelib_DataMapper_testcase extends tx_phpunit_testcase {
 	/**
 	 * @test
 	 */
+	public function saveForModelWithOneToManyRelationDeletesUnconnectedRecord() {
+		$model = $this->fixture->find(
+			$this->testingFramework->createRecord('tx_oelib_test')
+		);
+		$model->markAsDirty();
+
+		$composition = $model->getComposition();
+		$mapper = tx_oelib_MapperRegistry::
+			get('tx_oelib_tests_fixtures_TestingChildMapper');
+		$component1 = $mapper->find(
+			$this->testingFramework->createRecord(
+				'tx_oelib_testchild', array('parent' => $model->getUid())
+			)
+		);
+		$composition->add($component1);
+		$component2 = $mapper->find(
+			$this->testingFramework->createRecord(
+				'tx_oelib_testchild', array('parent' => $model->getUid())
+			)
+		);
+
+		$this->fixture->save($model);
+
+		$this->assertTrue(
+			$this->testingFramework->existsRecord(
+				'tx_oelib_testchild',
+				'uid = ' . $component2->getUid() . ' AND deleted = 1'
+			)
+		);
+	}
+
+	/**
+	 * @test
+	 */
 	public function saveForModelWithN1RelationSavesDirtyRelatedRecord() {
 		$friendUid = $this->testingFramework->createRecord('tx_oelib_test');
 		$uid = $this->testingFramework->createRecord(
